Add some content

--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>My CV</title>
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="css/style.css" rel="stylesheet">
-  <title>My CV</title>
 </head>
 
 <body>
-
-  <h1>Dragomir Dragnev</h1>
-
+	<div class="container">
+		<h1>Hristo Botev</h1>
+		<h2 class="job-title">Fiery and focused</h2>
+		+359999999999
+		https://botev.com
+		hr_botev@protonmail.com
+		Projects
+		Led a revolutionary 
+		My life philosophy
+		„Аз съм готов за целта да употребя всичките страшни средства. освен подлостта и лъжата, защото преди всичко трябва да сме човеци, после вече българи и патриоти…“
+		Skills
+		Education
+		Languages
+		Volunteering?
+	<div>
   <!-- <script src="js/script.js"></script> -->
 </body>
 
