Apply styles to the CV-header

--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
 
 <body>
 	<div class="container">
-		<h1>Hristo Botev</h1>
-		<h2 class="job-title">Fiery and focused</h2>
-		+359999999999
-		https://botev.com
-		hr_botev@protonmail.com
+		<div class="cv-header">
+			<div class="personal-info">
+				<h1>Hristo Botev</h1>
+				<h2 class="job-title">Fiery and focused</h2>
+				<div class="personal-contact">
+					<span>+359999999999</span>
+					<span>https://botev.com</span>
+					<span>hr_botev@protonmail.com</span>
+				</div>				
+			</div>
+			<div class="avatar">
+				avatar goes here
+			</div>
+		</div>
 		Projects
 		Led a revolutionary 
 		My life philosophy
@@ -27,7 +36,7 @@
 		Languages
 		Volunteering?
 	<div>
-  <!-- <script src="js/script.js"></script> -->
+  <!-- https://flexboxfroggy.com/ -->
 </body>
 
 </html>
