--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="cv-header">
 			<div class="personal-info">
 				<div class="personal-info-name">Hristo Botev</div>
-				<div class="personal-info-title">Fiery and focused</div>
+				<div class="personal-info-title">Clever tagline goes here</div>
 				<div class="personal-info-contact">
 					<div>
 						<i class="fas fa-phone fa-rotate-90"></i><span>+359999999999</span>
@@ -44,13 +44,13 @@
 					<div class="cv-item-work-experience">
 						<div class="cv-item-work-experience">
 							<div class="cv-item-work-experience-title">
-								National hero
+								Immortal
 							</div>
 							<!-- <div class="cv-item-work-experience-link">
 								<i class="fas fa-link fa-rotate-90"></i>
 							</div> -->
-							<div class="cv-item-work-experience-workplace">
-								Universe
+							<div class="cv-item-work-experience-position">
+								National hero
 							</div>
 							<div class="cv-item-work-experience-date">
 								<i class="far fa-calendar-alt"></i>1876-∞
@@ -59,7 +59,7 @@
 								<i class="fas fa-map-marker-alt"></i>
 							</div> -->
 							<div class="cv-item-work-experience-body">
-								One revolutionary to be remembered.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							</div>
 						</div>
 						<!-- TODO: is there a way to get these dividers dynamically -->
@@ -68,16 +68,16 @@
 					<div class="cv-item-work-experience">
 						<div class="cv-item-work-experience">
 							<div class="cv-item-work-experience-title">
-								Poet
+								Several newspapers
 							</div>
-							<div class="cv-item-work-experience-place">
-								
+							<div class="cv-item-work-experience-position">
+								Poet
 							</div>
 							<div class="cv-item-work-experience-date">
 								<i class="far fa-calendar-alt"></i>1868-1876 
 							</div>
 							<div class="cv-item-work-experience-body">
-								Wrote several stihotvoreniya.
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							</div>
 						</div>
 						<hr class="cv-item-subitem-separator">
@@ -87,14 +87,13 @@
 							<div class="cv-item-work-experience-title">
 								Zhelio Voivoda Cheta
 							</div>
-							<div class="cv-item-work-experience-place">
-								
+							<div class="cv-item-work-experience-position">
+								Leader
 							</div>
 							<div class="cv-item-work-experience-date">
 								<i class="far fa-calendar-alt"></i>1868-1868 
 							</div>
-							<div class="cv-item-work-experience-body">
-								Participated in Zhelio Voivoda cheta.
+							<div class="cv-item-work-experience-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 							</div>
 						</div>
 					</div>
@@ -114,13 +113,13 @@
 				</div>
 			</div>
 			<div class="cv-body-extra">
-				<div class="cv-item">
+				<!-- <div class="cv-item">
 					<div class="cv-item-heading">
 						Skills
 					</div>
 					<div class="cv-item-skills">
 					</div>
-				</div>
+				</div> -->
 				<div class="cv-item">
 					<div class="cv-item-heading">
 						Education
@@ -194,7 +193,39 @@
 							<span class="dot-full"></span>
 						</div>
 					</div>
-					<hr class="cv-item-subitem-separator">
+					<!-- <hr class="cv-item-subitem-separator"> -->
+					<div class="cv-item-language">
+						<div class="cv-item-language-title">
+							Russian
+						</div>
+						<div class="cv-item-language-level-label">
+							Proficient
+						</div>
+						<div class="cv-item-language-level-dots">
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+					<!-- <hr class="cv-item-subitem-separator"> -->
+					<div class="cv-item-language">
+						<div class="cv-item-language-title">
+							Romanian
+						</div>
+						<div class="cv-item-language-level-label">
+							Proficient
+						</div>
+						<div class="cv-item-language-level-dots">
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot"></span>
+						</div>
+					</div>
+					<!-- <hr class="cv-item-subitem-separator"> -->
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							Turkish
@@ -210,7 +241,7 @@
 							<span class="dot"></span>
 						</div>
 					</div>
-					<hr class="cv-item-subitem-separator">
+					<!-- <hr class="cv-item-subitem-separator"> -->
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							French
@@ -227,18 +258,20 @@
 						</div>
 					</div>
 				</div>
-				<div class="cv-item">
+				<!-- <div class="cv-item">
 					<div class="cv-item-heading">
 						Volunteering?
 					</div>
 					<div class="cv-item-volunteering">
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	<div>
   <!-- 	https://flexboxfroggy.com/ 
-		https://stackoverflow.com/questions/45536537/centering-in-css-grid -->
+		https://stackoverflow.com/questions/45536537/centering-in-css-grid 
+	
+	TODO: extract whatever possible to id (or I shouldn't?) -->
 </body>
 
 </html>
