Fix language subelements

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 							<span class="dot-full"></span>
 						</div>
 					</div>
-					<!-- <hr class="cv-item-subitem-separator"> -->
+					<hr class="cv-item-subitem-separator">
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							Russian
@@ -209,7 +209,7 @@
 							<span class="dot"></span>
 						</div>
 					</div>
-					<!-- <hr class="cv-item-subitem-separator"> -->
+					<hr class="cv-item-subitem-separator">
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							Romanian
@@ -225,7 +225,7 @@
 							<span class="dot"></span>
 						</div>
 					</div>
-					<!-- <hr class="cv-item-subitem-separator"> -->
+					<hr class="cv-item-subitem-separator">
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							Turkish
@@ -241,7 +241,7 @@
 							<span class="dot"></span>
 						</div>
 					</div>
-					<!-- <hr class="cv-item-subitem-separator"> -->
+					<hr class="cv-item-subitem-separator">
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							French
