--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					</div>
 					<!-- TODO: find a way to dynamically assign this css to even elements in the grid -->					
 					<div>
-						<i class="fas fa-link fa-rotate-90"></i><span>https://botev.com</span>
+						<i class="fas fa-link"></i><span>https://botev.com</span>
 					</div>
 				</div>				
 			</div>
