--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					</div>
 				</div>				
 			</div>
-			<div class="avatar">
-				avatar goes here
+			<div class="avatar-container">
+				<img class="avatar" src="images/sq_avatar.png">
 			</div>
 		</div>
 		<div class="cv-body">
