--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My CV</title>
+  <title>Example CV</title>
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 		<div class="cv-header">
 			<div class="personal-info">
 				<div class="personal-info-name">Hristo Botev</div>
-				<div class="personal-info-title">Clever tagline goes here</div>
+				<div class="personal-info-title">One who falls in fight for Freedom doesn't die</div>
 				<div class="personal-info-contact">
 					<div>
 						<i class="fas fa-phone fa-rotate-90"></i><span>+359999999999</span>
@@ -44,22 +44,23 @@
 					<div class="cv-item-work-experience">
 						<div class="cv-item-work-experience">
 							<div class="cv-item-work-experience-title">
-								Immortal
+								Voivoda
 							</div>
-							<!-- <div class="cv-item-work-experience-link">
-								<i class="fas fa-link fa-rotate-90"></i>
-							</div> -->
 							<div class="cv-item-work-experience-position">
-								National hero
+								The Botev Cheta
 							</div>
-							<div class="cv-item-work-experience-date">
-								<i class="far fa-calendar-alt"></i>1876-∞
+							<div class="cv-item-work-experience-extras">
+								<i class="far fa-calendar-alt"></i>1876-1876 <!-- 1876-∞ -->
 							</div>
-							<!-- <div class="cv-item-work-experience-date">
-								<i class="fas fa-map-marker-alt"></i>
-							</div> -->
 							<div class="cv-item-work-experience-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<ul>
+									<li>Organised a group of brave men in one month.</li>
+									<li>Recruited and persuaded people inspired by the idea of Freedom.</li>
+									<li>Stayed mentally strong in the hardships of being a Leader.</li>
+									<li>Kept up in fights even when outnumbered by the enemy.</li>
+									<li>Succeeded in making a difference.</li>
+									<li>Left a trace in the history of a nation.</li>
+								</ul>
 							</div>
 						</div>
 						<!-- TODO: is there a way to get these dividers dynamically -->
@@ -68,16 +69,17 @@
 					<div class="cv-item-work-experience">
 						<div class="cv-item-work-experience">
 							<div class="cv-item-work-experience-title">
-								Several newspapers
+								Poet 
 							</div>
 							<div class="cv-item-work-experience-position">
-								Poet
+								Several newspapers
 							</div>
-							<div class="cv-item-work-experience-date">
+							<div class="cv-item-work-experience-extras">
 								<i class="far fa-calendar-alt"></i>1868-1876 
 							</div>
 							<div class="cv-item-work-experience-body">
-								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								Wrote poems inspired by Love, Hate, and the life abroad.
+								Published in newspapers like „Знаме“ and „Дума на българските емигранти“.
 							</div>
 						</div>
 						<hr class="cv-item-subitem-separator">
@@ -85,15 +87,14 @@
 					<div class="cv-item-work-experience">
 						<div class="cv-item-work-experience">
 							<div class="cv-item-work-experience-title">
-								Zhelio Voivoda Cheta
+								Teacher and educator
 							</div>
-							<div class="cv-item-work-experience-position">
-								Leader
-							</div>
-							<div class="cv-item-work-experience-date">
+							<div class="cv-item-work-experience-extras">
 								<i class="far fa-calendar-alt"></i>1868-1868 
 							</div>
-							<div class="cv-item-work-experience-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+							<div class="cv-item-work-experience-body">
+								Took over my father's place as a teacher when he was sick. Later tutored to make a living abroad.
+								Translated books from Russian and Greek.
 							</div>
 						</div>
 					</div>
@@ -104,7 +105,7 @@
 					</div>
 					<div class="cv-item-life-philosophy">
 						<div class="cv-item-life-philosophy-quote">
-							„Аз съм готов за целта да употребя всичките страшни средства. освен подлостта и лъжата, защото преди всичко трябва да сме човеци, после вече българи и патриоти…“
+							„As the eye is used for perceiving light, the ear for the sound, the mind for understanding even the simplest forms of truth - so the sciences, education and development are necessary for a nation to reach up to a certain point in its welfare.“
 						</div>
 						<div class="cv-item-life-philosophy-source">
 							Botev
@@ -142,7 +143,7 @@
 								High School
 							</div>
 							<div class="cv-item-education-subheading">
-								Second Odessa Gymnasium High School
+								Second Odessa Gymnasium
 							</div>
 							<div class="cv-item-education-period">
 								
@@ -199,36 +200,36 @@
 							Russian
 						</div>
 						<div class="cv-item-language-level-label">
-							Proficient
+							Advanced
 						</div>
 						<div class="cv-item-language-level-dots">
 							<span class="dot-full"></span>
 							<span class="dot-full"></span>
 							<span class="dot-full"></span>
 							<span class="dot-full"></span>
-							<span class="dot"></span>
+							<span class="dot-full"></span>
+						</div>
+					</div>
+					<hr class="cv-item-subitem-separator">
+					<div class="cv-item-language">
+						<div class="cv-item-language-title">
+							Greek
+						</div>
+						<div class="cv-item-language-level-label">
+							Advanced
+						</div>
+						<div class="cv-item-language-level-dots">
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
+							<span class="dot-full"></span>
 						</div>
 					</div>
 					<hr class="cv-item-subitem-separator">
 					<div class="cv-item-language">
 						<div class="cv-item-language-title">
 							Romanian
-						</div>
-						<div class="cv-item-language-level-label">
-							Proficient
-						</div>
-						<div class="cv-item-language-level-dots">
-							<span class="dot-full"></span>
-							<span class="dot-full"></span>
-							<span class="dot-full"></span>
-							<span class="dot-full"></span>
-							<span class="dot"></span>
-						</div>
-					</div>
-					<hr class="cv-item-subitem-separator">
-					<div class="cv-item-language">
-						<div class="cv-item-language-title">
-							Turkish
 						</div>
 						<div class="cv-item-language-level-label">
 							Proficient
