Make header links clickable

--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
 				<div class="personal-info-name">Hristo Botev</div>
 				<div class="personal-info-title">One who falls in fight for Freedom doesn't die</div>
 				<div class="personal-info-contact">
+					<a href="tel:+359999999999" target="_blank">
 					<div>
 						<i class="fas fa-phone fa-rotate-90"></i><span>+359999999999</span>
 					</div>
-					<div class="even-personal-info-contact-child">
+					</a>
+					<a href="mailto:hristo@botev.com" target="_blank">
+						<div>
 						<i class="fas fa-at"></i><span>hristo@botev.com</span>
 					</div>
-					<!-- TODO: find a way to dynamically assign this css to even elements in the grid -->					
+					</a>
+					<a href="https://botev.com" target="_blank">
 					<div>
 						<i class="fas fa-link"></i><span>https://botev.com</span>
 					</div>
+					</a>
 				</div>				
 			</div>
 			<div class="avatar-container">
