Add cv footer with credits

--- a/index.html
+++ b/index.html
@@ -273,11 +273,16 @@
 				</div> -->
 			</div>
 		</div>
-	<div>
-  <!-- 	https://flexboxfroggy.com/ 
-		https://stackoverflow.com/questions/45536537/centering-in-css-grid 
+	</div>
+	<div class="cv-footer">
+		<a href="https://enhancv.com/static/62b4fedcd6f2ea443ee6c152de7ccc47/a152c/steve-jobs-resume.jpg" target="_blank">
+			Original design "Steve Jobs" example on www.enhancv.com
+		</a>
+	</div>
+
+<!-- Настане вечер – месец изгрее,  звезди обсипят свода небесен;
+    гора зашуми, вятър повее, –  Балканът пее хайдушка песен! -->
 	
-	TODO: extract whatever possible to id (or I shouldn't?) -->
 </body>
 
 </html>
