--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 				<div class="personal-info-title">One who falls in fight for Freedom doesn't die</div>
 				<div class="personal-info-contact">
 					<a href="tel:+359999999999" target="_blank">
-					<div>
-						<i class="fas fa-phone fa-rotate-90"></i><span>+359999999999</span>
-					</div>
+						<div>
+							<i class="fas fa-phone fa-rotate-90"></i><span>+359999999999</span>
+						</div>
 					</a>
 					<a href="mailto:hristo@botev.com" target="_blank">
 						<div>
-						<i class="fas fa-at"></i><span>hristo@botev.com</span>
-					</div>
+							<i class="fas fa-at"></i><span>hristo@botev.com</span>
+						</div>
 					</a>
 					<a href="https://botev.com" target="_blank">
-					<div>
-						<i class="fas fa-link"></i><span>https://botev.com</span>
-					</div>
+						<div>
+							<i class="fas fa-link"></i><span>https://botev.com</span>
+						</div>
 					</a>
 				</div>				
 			</div>
@@ -68,7 +68,6 @@
 								</ul>
 							</div>
 						</div>
-						<!-- TODO: is there a way to get these dividers dynamically -->
 						<hr class="cv-item-subitem-separator">
 					</div>
 					<div class="cv-item-work-experience">
@@ -266,9 +265,9 @@
 				</div>
 				<!-- <div class="cv-item">
 					<div class="cv-item-heading">
-						Volunteering?
+						Achievements
 					</div>
-					<div class="cv-item-volunteering">
+					<div class="cv-item-achievements">
 					</div>
 				</div> -->
 			</div>
@@ -282,7 +281,7 @@
 
 <!-- Настане вечер – месец изгрее,  звезди обсипят свода небесен;
     гора зашуми, вятър повее, –  Балканът пее хайдушка песен! -->
-	
+
 </body>
 
 </html>
